[gd_scene load_steps=43 format=2]

[ext_resource path="res://scripts/level/level_game.gd" type="Script" id=1]
[ext_resource path="res://Resource/BD/BD_quiz_game.tres" type="Resource" id=2]
[ext_resource path="res://GROBOLD.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets_sprites/op_button_text_background_left.png" type="Texture" id=4]
[ext_resource path="res://assets_sprites/op_button_text_background.png" type="Texture" id=5]
[ext_resource path="res://assets_sprites/background.png" type="Texture" id=6]
[ext_resource path="res://assets_sprites/timer_red.png" type="Texture" id=7]
[ext_resource path="res://assets_sprites/timer_normal.png" type="Texture" id=8]
[ext_resource path="res://assets_sprites/timer_orange.png" type="Texture" id=9]
[ext_resource path="res://assets_sprites/lifelines_expert_normal.png" type="Texture" id=10]
[ext_resource path="res://assets_sprites/lifelines_aud_normal.png" type="Texture" id=11]
[ext_resource path="res://assets_sprites/take_n_quit.png" type="Texture" id=12]
[ext_resource path="res://assets_sprites/question_text_background.png" type="Texture" id=13]
[ext_resource path="res://assets_sprites/lifelines_x2_normal.png" type="Texture" id=14]
[ext_resource path="res://fonts/disco-bling.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets_sprites/take_n_quit_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets_sprites/lifelines_aud_active.png" type="Texture" id=17]
[ext_resource path="res://assets_sprites/lifelines_x2_active.png" type="Texture" id=18]
[ext_resource path="res://assets_sprites/lifelines_expert_active.png" type="Texture" id=19]
[ext_resource path="res://assets_sprites/proceed_background.png" type="Texture" id=20]
[ext_resource path="res://assets_sprites/ok_btn.png" type="Texture" id=21]
[ext_resource path="res://assets_sprites/ok_btn_pressed.png" type="Texture" id=22]
[ext_resource path="res://fonts/Roboto-Bold.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://assets_audio/wrong_answer.wav" type="AudioStream" id=24]
[ext_resource path="res://assets_audio/correct_answer1.wav" type="AudioStream" id=25]
[ext_resource path="res://assets_audio/menu_buttonc_click.wav" type="AudioStream" id=26]
[ext_resource path="res://assets_sprites/proceed_buttons.png" type="Texture" id=27]
[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=28]
[ext_resource path="res://assets_sprites/light_beam.png" type="Texture" id=29]
[ext_resource path="res://assets_audio/correct_answer.wav" type="AudioStream" id=30]

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "green_time",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "red_time",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "yellow_time",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 13
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=10]
size = 22
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=11]
size = 15
use_mipmaps = true
use_filter = true
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=12]
size = 13
use_mipmaps = true
use_filter = true
font_data = ExtResource( 28 )

[node name="Level_game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
bd_quiz = ExtResource( 2 )
color_right = Color( 0.0627451, 0.819608, 0.286275, 0.894118 )
color_wrong = Color( 0.647059, 0.0313726, 0.0313726, 0.882353 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 360, 240 )
scale = Vector2( 0.703125, 0.843585 )
texture = ExtResource( 6 )

[node name="background_question" type="Sprite" parent="."]
position = Vector2( 359, 196 )
scale = Vector2( 0.7, 1.6 )
texture = ExtResource( 13 )

[node name="exit_button" type="TextureButton" parent="."]
margin_left = 670.0
margin_top = 5.0
margin_right = 746.0
margin_bottom = 77.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 16 )

[node name="help_public" type="TextureButton" parent="."]
margin_left = 150.0
margin_top = 75.0
margin_right = 250.0
margin_bottom = 139.0
rect_scale = Vector2( 0.5, 0.6 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 17 )

[node name="help_university" type="TextureButton" parent="."]
margin_left = 80.0
margin_top = 75.0
margin_right = 192.0
margin_bottom = 145.0
rect_scale = Vector2( 0.5, 0.6 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 19 )

[node name="help_half_awnser" type="TextureButton" parent="."]
margin_left = 10.0
margin_top = 75.0
margin_right = 122.0
margin_bottom = 145.0
rect_scale = Vector2( 0.5, 0.6 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 18 )

[node name="lbl_question_number" type="Label" parent="."]
margin_left = 12.0
margin_top = 17.0
margin_right = 311.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0.92549, 0.831373, 0.0784314, 1 )
custom_colors/font_outline_modulate = Color( 0.984314, 0.905882, 0.0509804, 1 )
custom_colors/font_color_shadow = Color( 0.980392, 0.815686, 0.0666667, 1 )
custom_fonts/font = SubResource( 8 )
text = "QUESTION NUMBER: 0"

[node name="txt_question" type="Label" parent="."]
margin_left = 70.0
margin_top = 131.0
margin_right = 646.0
margin_bottom = 259.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "teste"
align = 1
valign = 1
autowrap = true

[node name="question_holder" type="GridContainer" parent="."]
margin_left = -2.0
margin_top = 289.0
margin_right = 1020.0
margin_bottom = 449.0
rect_scale = Vector2( 0.71, 0.7 )
custom_constants/hseparation = -50
columns = 2

[node name="button_option_1" type="Button" parent="question_holder"]
margin_right = 536.0
margin_bottom = 78.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "TESTE"
icon = ExtResource( 5 )
flat = true
icon_align = 1

[node name="button_option_3" type="Button" parent="question_holder"]
margin_left = 486.0
margin_right = 1022.0
margin_bottom = 78.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "TESTE"
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="button_option_2" type="Button" parent="question_holder"]
margin_top = 82.0
margin_right = 536.0
margin_bottom = 160.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "TESTE"
icon = ExtResource( 5 )
flat = true
icon_align = 1

[node name="button_option_4" type="Button" parent="question_holder"]
margin_left = 486.0
margin_top = 82.0
margin_right = 1022.0
margin_bottom = 160.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "TESTE"
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="timer_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 361, 344 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 6 )
animation = "green_time"

[node name="lbl_timer" type="Label" parent="timer_sprite"]
margin_left = -29.0
margin_top = -9.0
margin_right = 31.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 7 )
align = 1

[node name="Timer" type="Timer" parent="."]

[node name="hints" type="Sprite" parent="."]
visible = false
position = Vector2( 361, 243 )
scale = Vector2( 2.083, 1.78238 )
texture = ExtResource( 20 )

[node name="lbl_aux" type="Label" parent="hints"]
margin_left = -172.0
margin_top = -61.0
margin_right = 172.0
margin_bottom = -43.0
custom_fonts/font = SubResource( 9 )
text = "A RESPOSTA ESCOLHIDA FOI:"
align = 1

[node name="lbl_awnser" type="Label" parent="hints"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -346.0
margin_top = -118.5
margin_right = -1.0
margin_bottom = -88.5
custom_fonts/font = SubResource( 10 )
text = "A"
align = 1

[node name="hint_ok_bttn" type="TextureButton" parent="hints"]
margin_left = -28.8046
margin_top = 42.0785
margin_right = 99.1954
margin_bottom = 170.078
rect_scale = Vector2( 0.4, 0.3 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )

[node name="wrong_answer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )

[node name="right_answer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="audio_click_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )

[node name="new_question_audio" type="AudioStreamPlayer" parent="."]

[node name="lose_screen" type="Sprite" parent="."]
visible = false
position = Vector2( 360, 239 )
scale = Vector2( 2.32566, 4.64 )
texture = ExtResource( 27 )

[node name="lbl_lose" type="Label" parent="lose_screen"]
margin_left = -143.185
margin_top = -46.1207
margin_right = 144.815
margin_bottom = -25.1207
custom_colors/font_color = Color( 0.886275, 0.0470588, 0.0470588, 1 )
custom_colors/font_color_shadow = Color( 0.0666667, 0.027451, 0.027451, 1 )
custom_fonts/font = SubResource( 11 )
text = "VocÃª perdeu!!!"
align = 1

[node name="btn_lose" type="TextureButton" parent="lose_screen"]
margin_left = -15.0
margin_top = 35.0
margin_right = 113.0
margin_bottom = 163.0
rect_scale = Vector2( 0.2, 0.1 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )

[node name="causa_perca" type="Label" parent="lose_screen"]
margin_left = -143.185
margin_top = -25.2155
margin_right = 144.815
margin_bottom = -11.2155
custom_fonts/font = SubResource( 12 )
text = "xxxxxxxXXXXXxxxxXXXXXXxxxxx"
align = 1
valign = 1

[node name="high_question" type="Label" parent="lose_screen"]
margin_left = -143.185
margin_top = 3.44828
margin_right = 144.815
margin_bottom = 17.4483
text = "high_score question."
align = 1

[node name="win_screen" type="Sprite" parent="."]
visible = false
position = Vector2( 360, 239 )
scale = Vector2( 2.32566, 4.64 )
texture = ExtResource( 27 )

[node name="lbl_win" type="Label" parent="win_screen"]
margin_left = -143.185
margin_top = -46.1207
margin_right = 144.815
margin_bottom = -25.1207
custom_colors/font_color = Color( 0, 0.760784, 0.172549, 1 )
custom_colors/font_color_shadow = Color( 0.0235294, 0.188235, 0.0862745, 1 )
custom_fonts/font = SubResource( 11 )
text = "VocÃª Ganhou!!! ParabÃ©ns!!!"
align = 1

[node name="btn_lose" type="TextureButton" parent="win_screen"]
margin_left = -15.0
margin_top = 35.0
margin_right = 113.0
margin_bottom = 163.0
rect_scale = Vector2( 0.2, 0.1 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )

[node name="lbl_xxxx" type="Label" parent="win_screen"]
margin_left = -143.185
margin_top = -25.2155
margin_right = 144.815
margin_bottom = -11.2155
custom_colors/font_color = Color( 0, 0.760784, 0.172549, 1 )
custom_colors/font_color_shadow = Color( 0.0235294, 0.188235, 0.0862745, 1 )
custom_fonts/font = SubResource( 12 )
text = "VocÃª chegou no prÃªmio mÃ¡ximo de:"
align = 1
valign = 1

[node name="lbl_premio" type="Label" parent="win_screen"]
margin_left = -143.185
margin_top = 0.646553
margin_right = 144.815
margin_bottom = 31.6466
custom_colors/font_color = Color( 0.0784314, 0.529412, 0.180392, 1 )
custom_colors/font_color_shadow = Color( 0.0235294, 0.188235, 0.0862745, 1 )
text = "R$ 1.000.000,00
(um milhÃ£o de reais)"
align = 1

[node name="LightBeam" type="Sprite" parent="win_screen"]
modulate = Color( 1, 1, 1, 0.235294 )
position = Vector2( 1.52588e-05, -19.6121 )
scale = Vector2( 0.573594, 0.232839 )
texture = ExtResource( 29 )

[node name="win_game" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )

[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="help_public" to="." method="_on_help_public_pressed"]
[connection signal="pressed" from="help_university" to="." method="_on_help_university_pressed"]
[connection signal="pressed" from="help_half_awnser" to="." method="_on_help_half_awnser_pressed"]
[connection signal="pressed" from="hints/hint_ok_bttn" to="." method="_on_hint_ok_bttn_pressed"]
[connection signal="pressed" from="lose_screen/btn_lose" to="." method="_on_btn_lose_pressed"]
[connection signal="pressed" from="win_screen/btn_lose" to="." method="_on_btn_lose_pressed"]
